# shanghanlun-v2

./: .dockerignore  .env_prod  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  cliff.toml  dev.yml  docker-compose.yml  prod.yml
.github/workflows/: deploy.yml  release.yml
examples/: first_example.rs  generate_jwt.rs  get_date.rs  get_hash.rs
src/: conf.rs  db.rs  handlers.rs  lib.rs  logger.rs  main.rs  router.rs  state.rs  utils.rs
src/app/: server.rs
src/common/: valid.rs
src/conf/: app.rs  base.rs
src/db/: my_redis.rs  psql.rs
src/handlers/: explanation.rs  visitor.rs
src/handlers/explanation/: hu.rs
src/handlers/explanation/hu/: create.rs  model.rs  query.rs
src/handlers/formula/: model.rs  query.rs
src/handlers/herbs/: model.rs  query.rs
src/handlers/prescription/: model.rs  query.rs
src/handlers/relations/: model.rs  query.rs
src/handlers/shared/: model.rs  pagination.rs
src/handlers/sub_formula/: model.rs  query.rs
src/handlers/syndrome/: model.rs  query.rs
src/handlers/treatise/: model.rs  query.rs
src/handlers/visitor/: insert.rs  model.rs  query.rs
src/middlewares/: auth.rs
src/middlewares/auth/: jwt.rs  layer.rs
src/response/: errors.rs
src/router/: formula.rs  healthy.rs  herbs.rs  prescription.rs  relations.rs  show_api.rs  sub_formula.rs  syndrome.rs  treatise.rs  version.rs  visitor.rs
src/router/explanation/: hu.rs
src/utils/: crypto.rs  get_vid.rs  latency.rs
tests/: first_test.rs
