[package]
name = "shanghanlun"
version = "2.0.0"
edition = "2024"
authors = ["Qiqianily <Joedian@163.com>"]
description = "伤寒论相关"
rust-version = "1.94.1"
license = "MIT"

[[bin]]
name = "shanghanlun"                        # The name of the binary executable
path = "src/main.rs"                        # The path to the main.rs file

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
axum = { version = "0.8", features = ["macros"] }
axum-valid = { version = "0.24", features = ["full_validator"] }
validator = { version = "0.20", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "normalize-path", "auth"] }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1", features = ["async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono", "derive", "time"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive"] }
config = { version = "0.15", features = ["yaml"] }
redis = { version = "1.0" ,features = ["tokio-comp"] }
mobc = "0.9"
mobc-redis = "0.9"
argon2={ version = "0.6.0-rc.7" }
xid = "1.1"
bytesize = "2.3"
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
